refactor:
- Implemented custom mapping logic in `GameMapper` to convert IGDB ratings (0-100) to a 0-10 scale with one decimal place.
- Resolved MapStruct compilation error regarding the `DROPPED` enum constant in `GameStatus` by ensuring consistency between the OpenAPI definition and the domain model.