@@ -3,7 +3,10 @@ package com.proyecto.infrastructure.adapter.in.web.mapper;
 import com.proyecto.videogames.generated.model.Game;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.net.URI;
+import java.util.Collections;
 import java.util.List;
 
 @Mapper(componentModel = "spring")
@@ -14,7 +17,7 @@ public interface GameMapper {
     @Mapping(target = "genres", source = "genres")
     @Mapping(target = "releaseDate", source = "releaseDate")
     @Mapping(target = "summary", source = "summary")
-    @Mapping(target = "rating", source = "rating")
+    @Mapping(target = "rating", expression = "java(mapRating(domainGame.rating()))")
     @Mapping(target = "platforms", source = "platforms")
     @Mapping(target = "coverImageUrl", source = "coverImageUrl")
     @Mapping(target = "videos", source = "videos")
@@ -27,10 +30,19 @@ public interface GameMapper {
 
     default List<URI> mapStringListToUriList(List<String> urls) {
         if (urls == null) {
-            return null;
+            return Collections.emptyList();
         }
         return urls.stream()
                 .map(this::mapStringToUri)
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
+    }
+
+    default Double mapRating(Double rating) {
+        if (rating == null) {
+            return null;
+        }
+        BigDecimal bd = BigDecimal.valueOf(rating / 10.0);
+        bd = bd.setScale(1, RoundingMode.HALF_UP);
+        return bd.doubleValue();
     }
 }
